feat: Remove hardcoded 10 AI limitations - replace fixed thread pools with cached thread pools and make AI provider list configurable